PreInit Thread and DocBuilders